	  should always be included if present). Save also records used for
	  checking empty $Logfile. (Szaka)
	- ntfscp: add ability to specify directory as destination file.  (Yura)
	- ntfsresize: fix segfault during filesystem check if NTFS was corrupted
	  in a way that clusters were referenced outside of the volume.  (Szaka)
	- Major rewrite of libntfs/win32_io.c and in particular seek, read, and
	  write related code.
	- ntfsclone: --rescue works at the lowest, sector and not cluster level
	  thus more data can be rescued. The contents of the unreadable sectors
	  are filled by character '?' and the beginning of such sectors are
	  marked by "BadSectoR\0".  (Krishna Mohan Gundu, Szaka)
	- ntfsclone: fixed an off-by-one error during --metadata in function
	  wipe_data().  (Szaka)
	- Detect and refuse to mount hibernated Windows during ntfs_mount() if 
	  the volume is tried to be opened read-write.  (Szaka)
	- Move back from BitKeeper to CVS on SF.net and fix executable
	  permissions that got lost during the move.  (Anton)
	- ntfsresize: fix segfault during filesystem check if NTFS $Bitmap file
	  size was larger than it should have been.  (Szaka)
	- mkntfs: don't mark NTFS dirty if the backup boot sector could be
	  successfully created (Szaka)

04/09/2004 - 1.9.4 - Urgent bug fixes.

	- Rewrite win32_io.c to allow device level write support.  (Yuval)
	- Make ntfscp update file size in $FILE_NAME(0x30) attribute.  (Yura)
	- Fix ntfsclone crash when --restore-image was used for block device
	  outputs.  (Masaru Kawashima, Szaka)
	
03/09/2004 - 1.9.3 - Lots of fixes and enhancements all over the place.

	- Fix access of MFT_RECORD->bytes_in_use to use le32_to_cpu() instead
	  of le16_to_cpu() in libntfs/volume.c.  (Pete Curran)
	- Rename uchar_t to ntfschar everywhere since uchar_t is already
	  defined on Solaris to be an unsigned 1-byte character and it is also
	  defined like this in POSIX.
	- Do not use the ++ operator on a variable when it is being passed as a