@@ -130,7 +130,8 @@ xx/xx/2005 - 2.0.0-WIP
 	- ntfsresize: fix segfault during filesystem check if NTFS was corrupted
 	  in a way that clusters were referenced outside of the volume.  (Szaka)
 	- Major rewrite of libntfs/win32_io.c and in particular seek, read, and
-	  write related code.
+	  write related code.  As part of this perform run-time detection of
+	  presence of SetFilePointerEx() and if not present emulate it.
 	- ntfsclone: --rescue works at the lowest, sector and not cluster level
 	  thus more data can be rescued. The contents of the unreadable sectors
 	  are filled by character '?' and the beginning of such sectors are
